apps/networking/headscale/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: headscale
spec:
  serviceName: headscale
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      containers:
        - name: headscale
          image: "headscale/headscale:v0.23.0"
          imagePullPolicy: IfNotPresent
          command: ["/go/bin/headscale", "serve"]
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
            - name: derp
              protocol: TCP
              containerPort: 3478
            - name: metrics
              protocol: TCP
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /vol/config
            - name: data
              mountPath: /vol/data
            - name: secret
              mountPath: /vol/secret
            - name: etc
              mountPath: /etc/headscale
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: headscale-site
        - name: etc
          configMap:
            name: headscale-etc
        - name: secret
          secret:
            secretName: hs-privatekey-pw-1password
            optional: true
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: "sata"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
