apps/networking/headscale/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: headscale
  namespace: headscale
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hs.lab.apj.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false" # Or "true" as per your setup
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: headscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hs.lab.apj.dev`)
      kind: Rule
      middlewares: []
      services:
        - name: headscale # K8s service name
          port: 8080     # K8s service port
  tls:
    secretName: lab-apj-dev-tls # Your wildcard certificate
